--- a/index.html
+++ b/index.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="en-GB">
+    <head>
+        <title>Team Blitz - F1 In Schools | Home</title>
+        <style>
+
+        </style>
+        <meta charset="UTF-8">
+        <meta name="keywords" content="Team Blitz, F1 in Schools, St Olave's">
+        <meta name="descritpion" content="Homepage of Team Blitz website">
+        <meta name="author" content="Team Blitz">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="template.css">
+        <script src="scripts.js" defer></script>
+    </head>
+
+    <body>
+        <nav>
+            <ul>
+                <li>Welcome</li>
+                <li>Aboot us</li>
+                <li>Our car design</li>
+                <li>Portfolio</li>
+            </ul>
+        </nav>
+        <section>
+            <h1>Hello World</h1>
+            <p>I'm hosted with GitHub Pages.</p>
+        </section>
+        <footer></footer>
+    </body>
 </html>
