--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="en-GB">
     <head>
         <title>Team Blitz - F1 In Schools | Home</title>
-        <style>
-
-        </style>
         <meta charset="UTF-8">
         <meta name="keywords" content="Team Blitz, F1 in Schools, St Olave's">
         <meta name="descritpion" content="Homepage of Team Blitz website">
@@ -17,10 +14,10 @@
     <body>
         <nav>
             <ul>
-                <li>Welcome</li>
-                <li>Aboot us</li>
-                <li>Our car design</li>
-                <li>Portfolio</li>
+                <li><a href="index.html">Welcome</a></li>
+                <li><a href="about.html">Aboot us</a></li>
+                <li><a href="car.html">Our car design</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
         <section>
