Fix bug css doesnt work

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="descritpion" content="Homepage of Team Blitz website">
         <meta name="author" content="Team Blitz">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="template.css">
+        <link rel="stylesheet" type="text/css" href="template.css">
         <script src="scripts.js" defer></script>
     </head>
 
