Create homepage template

--- a/index.html
+++ b/index.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 <html lang="en-GB">
     <head>
+        <script src="scripts.js" defer></script>
         <link rel="stylesheet" type="text/css" href="template.css">
         <title>Team Blitz - F1 In Schools | Home</title>
+
         <meta charset="UTF-8">
         <meta name="keywords" content="Team Blitz, F1 in Schools, St Olave's">
         <meta name="descritpion" content="Homepage of Team Blitz website">
         <meta name="author" content="Team Blitz">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="scripts.js" defer></script>
     </head>
 
     <body>
         <nav>
             <ul>
                 <li><a href="index.html">Welcome</a></li>
-                <li><a href="about.html">Aboot us</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="car.html">Our car design</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="portfolio.html">The Portfolio</a></li>
             </ul>
         </nav>
-        <section>
-            <h1>Hello World</h1>
-            <p>I'm hosted with GitHub Pages.</p>
+        <section style="width: 50%">
+            <h1>Who are we?</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h1>What is F1 in Schools?</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h1>Meet the Team!</h1>
+            <div id="Yash">
+                <img src="placeholder.png">
+                <p></p>
+            </div>
+            <div id="Chen">
+                <img src="placeholder.png">
+            </div>
+            <div id="Pranit">
+                <img src="placeholder.png">
+            </div>
+            <div id="Rayhaan">
+                <img src="placeholder.png">
+            </div>
         </section>
         <footer></footer>
     </body>
