fix naming consistency

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
     <head>
         <script src="scripts.js" defer></script>
-        <link rel="stylesheet" type="text/css" href="template.css">
+        <link rel="stylesheet" type="text/css" href="global.css">
         <title>Team Blitz - F1 In Schools | Home</title>
 
         <meta charset="UTF-8">
