--- a/index.html
+++ b/index.html
@@ -28,22 +28,26 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <h1>Meet the Team!</h1>
             <div id="Yash" style="float:left;width:45%;display: inline-block;">
-                <h1>Yash Parekh - Team Leader & Graphic Designer</h1>
+                <h2>Yash Parekh - Team Leader & Graphic Designer</h1>
+                <img src="placeholder.png">
                 <img src="placeholder.png">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div id="Chen" style="float:right;width:45%;display: inline-block;">
-                <h1>Chen Wang - Testing & Social Media Manager</h1>
+                <h2>Chen Wang - Testing & Social Media Manager</h1>
+                <img src="placeholder.png">
                 <img src="placeholder.png">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div id="Pranit" style="float:left;width:45%;display: inline-block;">
-                <h1>Prandit Mallhotra - Design Engineer</h1>
+                <h2>Prandit Mallhotra - Design Engineer</h1>
+                <img src="placeholder.png">
                 <img src="placeholder.png">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div id="Rayhaan" style="float:right;width:45%;display: inline-block;">
-                <h1>Rayhaan Smith - Resource Manager</h1>
+                <h2>Rayhaan Smith - Resource Manager</h1>
+                <img src="placeholder.png">
                 <img src="placeholder.png">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
