Split introductions into separate page; general restyling

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <body>
         <nav>
             <ul>
-                <li><a href="index.html">Welcome</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="car.html">Our car design</a></li>
-                <li><a href="portfolio.html">The Portfolio</a></li>
+                <li><a href="index.html">Welcome!</a></li>
+                <li><a href="our-team.html">Our Team</a></li>
+                <li><a href="our-car-design.html">Our Car Design</a></li>
+                <li><a href="the-portfolio.html">The Portfolio</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
+                <li style="float:right;"><a style="padding:1px" href="index.html"><img src="placeholder.png" style="height:50px;width:50px;"></a></li>
+                <li style="float:right;"><a href="index.html">Blitz</a></li>
             </ul>
         </nav>
         <section style="width: 80%;margin:auto;">
@@ -26,30 +29,42 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <h1>What is F1 in Schools?</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <h1>Meet the Team!</h1>
-            <div id="Yash" style="float:left;width:45%;display: inline-block;">
-                <h2>Yash Parekh - Team Leader & Graphic Designer</h1>
-                <img src="placeholder.png">
-                <img src="placeholder.png">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-            <div id="Chen" style="float:right;width:45%;display: inline-block;">
-                <h2>Chen Wang - Testing & Social Media Manager</h1>
-                <img src="placeholder.png">
-                <img src="placeholder.png">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-            <div id="Pranit" style="float:left;width:45%;display: inline-block;">
-                <h2>Prandit Mallhotra - Design Engineer</h1>
-                <img src="placeholder.png">
-                <img src="placeholder.png">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-            <div id="Rayhaan" style="float:right;width:45%;display: inline-block;">
-                <h2>Rayhaan Smith - Resource Manager</h1>
-                <img src="placeholder.png">
-                <img src="placeholder.png">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="large">
+                <h1>The Team</h1>
+                <p style="color:red">Please note, all school emails have been disabled until further notice due to certain circumstances.</p>
+                <div class="small">
+                    <h2>Yash Parekh</h2>
+                    <p>Team Leader</p>
+                    <a href="yash.parekh@saintolaves.net">
+                        <img src="mail.png" style="height:40px;width:40px;float:left;">
+                        <h3>yash.parekh@saintolaves.net</h3>
+                    </a>
+                </div>
+                <div class="small">
+                    <h2>Pranit Mallhotra</h2>
+                    <p>Design Engineer</p>
+                    <a href="pranit.malhotra@saintolaves.net">
+                        <img src="mail.png" style="height:40px;width:40px;float:left;">
+                        <h3>pranit.malhotra@saintolaves.net</h3>
+                    </a>
+                </div>
+                <div class="small">
+                    <h2>Chen Hui Wang</h2>
+                    <p>Testing & Social Media Manager</p>
+                    <a href="chenhui.wang@saintolaves.net">
+                        <img src="mail.png" style="height:40px;width:40px;float:left;">
+                        <h3>chenhui.wang@saintolaves.net</h3>
+                    </a>
+                </div>
+                <div class="small">
+                    <h2>Rayhaan Smith</h2>
+                    <p>Resource Manager</p>
+                    <a href="rayhaan.smith@saintolaves.net">
+                        <img src="mail.png" style="height:40px;width:40px;float:left;">
+                        <h3>rayhaan.smith@saintolaves.net</h3>
+                    </a>
+                </div>
+                <a class="link" href="our-team.html" style="padding: 2px;width:50%;margin: auto;border-radius: 50px;"><h1>Click here to learn more about us..</h1></a>
             </div>
         </section>
         <footer></footer>
