Setup other pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="small">
                     <h2>Yash Parekh</h2>
                     <p>Team Leader</p>
-                    <a href="yash.parekh@saintolaves.net">
+                    <a href="mailto:yash.parekh@saintolaves.net">
                         <img src="mail.png" style="height:40px;width:40px;float:left;">
                         <h3>yash.parekh@saintolaves.net</h3>
                     </a>
@@ -43,7 +43,7 @@
                 <div class="small">
                     <h2>Pranit Mallhotra</h2>
                     <p>Design Engineer</p>
-                    <a href="pranit.malhotra@saintolaves.net">
+                    <a href="mailto:pranit.malhotra@saintolaves.net">
                         <img src="mail.png" style="height:40px;width:40px;float:left;">
                         <h3>pranit.malhotra@saintolaves.net</h3>
                     </a>
@@ -51,7 +51,7 @@
                 <div class="small">
                     <h2>Chen Hui Wang</h2>
                     <p>Testing & Social Media Manager</p>
-                    <a href="chenhui.wang@saintolaves.net">
+                    <a href="mailto:chenhui.wang@saintolaves.net">
                         <img src="mail.png" style="height:40px;width:40px;float:left;">
                         <h3>chenhui.wang@saintolaves.net</h3>
                     </a>
@@ -59,7 +59,7 @@
                 <div class="small">
                     <h2>Rayhaan Smith</h2>
                     <p>Resource Manager</p>
-                    <a href="rayhaan.smith@saintolaves.net">
+                    <a href="mailto:rayhaan.smith@saintolaves.net">
                         <img src="mail.png" style="height:40px;width:40px;float:left;">
                         <h3>rayhaan.smith@saintolaves.net</h3>
                     </a>
@@ -67,6 +67,9 @@
                 <a class="link" href="our-team.html" style="padding: 2px;width:50%;margin: auto;border-radius: 50px;"><h1>Click here to learn more about us..</h1></a>
             </div>
         </section>
-        <footer></footer>
+        <footer>
+            <img src="construction.png" style="float:left;">
+            <h1>Footer Under Contruction - watch this space!</h1>
+        </footer>
     </body>
 </html>
