Combine all files onto 1 homepage + add pictures of each team member

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <script src="scripts.js" defer></script>
         <link rel="stylesheet" type="text/css" href="global.css">
-        <title>Team Blitz - F1 In Schools | Home</title>
+        <title>Team Blitz - F1 In Schools</title>
 
         <meta charset="UTF-8">
         <meta name="keywords" content="Team Blitz, F1 in Schools, St Olave's">
@@ -15,61 +15,64 @@
     <body>
         <nav>
             <ul>
-                <li><a href="index.html">Welcome!</a></li>
-                <li><a href="our-team.html">Our Team</a></li>
-                <li><a href="our-car-design.html">Our Car Design</a></li>
-                <li><a href="the-portfolio.html">The Portfolio</a></li>
-                <li><a href="contact-us.html">Contact Us</a></li>
+                <li><a href="#">Welcome!</a></li>
+                <li><a href="#our-team">Our Team</a></li>
+                <li><a href="#our-car-design">Our Car Design</a></li>
+                <li><a href="#the-portfolio">The Portfolio</a></li>
+                <li><a href="#contact-us">Contact Us</a></li>
                 <li style="float:right;"><a style="padding:1px" href="index.html"><img src="placeholder.png" style="height:50px;width:50px;"></a></li>
                 <li style="float:right;"><a href="index.html">Blitz</a></li>
             </ul>
         </nav>
-        <section style="width: 80%;margin:auto;">
+        <section>
+            <img src="construction.png" style="height:1000px;width:1000px">
+        </section>
+        <section id="our-team">
             <h1>Who are we?</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <h1>What is F1 in Schools?</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <div class="large">
-                <h1>The Team</h1>
-                <p style="color:red">Please note, all school emails have been disabled until further notice due to certain circumstances.</p>
-                <div class="small">
-                    <h2>Yash Parekh</h2>
-                    <p>Team Leader</p>
-                    <a href="mailto:yash.parekh@saintolaves.net">
-                        <img src="mail.png" style="height:40px;width:40px;float:left;">
-                        <h3>yash.parekh@saintolaves.net</h3>
-                    </a>
-                </div>
-                <div class="small">
-                    <h2>Pranit Mallhotra</h2>
-                    <p>Design Engineer</p>
-                    <a href="mailto:pranit.malhotra@saintolaves.net">
-                        <img src="mail.png" style="height:40px;width:40px;float:left;">
-                        <h3>pranit.malhotra@saintolaves.net</h3>
-                    </a>
-                </div>
-                <div class="small">
-                    <h2>Chen Hui Wang</h2>
-                    <p>Testing & Social Media Manager</p>
-                    <a href="mailto:chenhui.wang@saintolaves.net">
-                        <img src="mail.png" style="height:40px;width:40px;float:left;">
-                        <h3>chenhui.wang@saintolaves.net</h3>
-                    </a>
-                </div>
-                <div class="small">
-                    <h2>Rayhaan Smith</h2>
-                    <p>Resource Manager</p>
-                    <a href="mailto:rayhaan.smith@saintolaves.net">
-                        <img src="mail.png" style="height:40px;width:40px;float:left;">
-                        <h3>rayhaan.smith@saintolaves.net</h3>
-                    </a>
-                </div>
-                <a class="link" href="our-team.html" style="padding: 2px;width:50%;margin: auto;border-radius: 50px;"><h1>Click here to learn more about us..</h1></a>
+            <a href="https://www.f1inschools.co.uk/about.html">Learn more..</a>
+            <h1>The Team</h1>
+            <div class="small">
+                <h2>Yash Parekh</h2>
+                <p class="bold">Team Leader & Graphic Designer</p>
+                <img src="Yash.jpg">
+                <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
+            </div>
+            <div class="small">
+                <h2>Pranit Malhotra</h2>
+                <p class="bold">Design Engineer</p>
+                <img src="Pranit.jpg">
+                <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
+            </div>
+            <div class="small">
+                <h2>Chen Hui Wang</h2>
+                <p class="bold">Testing & Social Media Manager</p>
+                <img src="Chen.jpg">
+                <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
+            </div>
+            <div class="small">
+                <h2>Rayhaan Smith</h2>
+                <p class="bold">Resource Manager</p>
+                <img src="Rayhaan.jpg">
+                <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
             </div>
         </section>
-        <footer>
-            <img src="construction.png" style="float:left;">
-            <h1>Footer Under Contruction - watch this space!</h1>
+        <section id="our-car-design">
+            <h1>Our Car Design</h1>
+            <p>To be published</p>
+        </section>
+        <section id="the-portfolio">
+            <h1>Our Portfolio</h1>
+            <p>To be published</p>
+        </section>
+        <section id="contact-us">
+            <h1>Contact us</h1>
+            <p>To be published</p>
+        </section>
+        <footer style="margin:0">
+            <h3 style="padding: 20px;">© Chen Wang, 2022-2023. All rights reserved. Intellectual property of Team Blitz, St Olave's Grammar School. Copying without permission is prohibited.</h3>
         </footer>
     </body>
 </html>
