Add render and email information

--- a/404.html
+++ b/404.html
@@ -26,13 +26,14 @@
         </nav>
         <section style="width: 80%;margin:auto;">
             <img src="construction.png" style="float:left;">
-            <h1>404 Error</h1>
-            <h1>Page Not Found</h1>
-            <p>Woah there - hold up! This page doesn't exist. Check the URL to see if you misspelt anything, or use the navigation bar to go to each page!</p>
+            <div style="float:right;border:none;">
+                <h1>404 Error</h1>
+                <h1>Page Not Found</h1>
+                <p>Woah there - hold up! This page doesn't exist. Check the URL to see if you misspelt anything, or use the navigation bar to go to each page!</p>
+            </div>
         </section>
-        <footer>
-            <img src="construction.png" style="float:left;">
-            <h1>Footer Under Contruction - watch this space!</h1>
+        <footer style="margin:0">
+            <h3 style="padding: 20px;">© Chen Wang, 2022-2023. All rights reserved.</h3>
         </footer>
     </body>
 </html>
