--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <section>
-            <img src="construction.png" style="height:1000px;width:1000px">
+            <img src="Render" style="height:100%;width:100%">
         </section>
         <section id="our-team">
             <h1>Who are we?</h1>
@@ -61,18 +61,22 @@
         </section>
         <section id="our-car-design">
             <h1>Our Car Design</h1>
-            <p>To be published</p>
+            <p>To be published after Regionals</p>
         </section>
         <section id="the-portfolio">
             <h1>Our Portfolio</h1>
-            <p>To be published</p>
+            <p>To be published after Regionals</p>
         </section>
         <section id="contact-us">
             <h1>Contact us</h1>
-            <p>To be published</p>
+            <p>Team Email: teamblitz.f1.olaves@gmail.com</p>
+            <p>Yash Parekh, Team Leader: yash.parekh@saintolaves.net</p>
+            <p>Pranit Malhotra, Design Engineer: pranit.malhotra@saintolaves.net</p>
+            <p>Chen Hui Wang, Testing & Social Media Manager: chenhui.wang@saintolaves.net</p>
+            <p>Rayhaan Smith, Resource Manager: rayhaan.smith@saintolaves.net</p>
         </section>
         <footer style="margin:0">
-            <h3 style="padding: 20px;">© Chen Wang, 2022-2023. All rights reserved. Intellectual property of Team Blitz, St Olave's Grammar School. Copying without permission is prohibited.</h3>
+            <h3 style="padding: 20px;">© Chen Wang, 2022-2023. All rights reserved.</h3>
         </footer>
     </body>
 </html>
