--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <section>
-            <img src="Render" style="height:100%;width:100%">
+            <img src="Render.png" style="height:100%;width:100%">
         </section>
         <section id="our-team">
             <h1>Who are we?</h1>
