--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <li><a href="#our-car-design">Our Car Design</a></li>
                 <li><a href="#the-portfolio">The Portfolio</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
-                <li style="float:right;"><a style="padding:1px" href="index.html"><img src="placeholder.png" style="height:50px;max-width:50px;"></a></li>
+                <li style="float:right;"><a style="padding:1px" href="index.html"><img src="placeholder.png" style="height:50px;width:50px;"></a></li>
                 <li style="float:right;"><a href="index.html">Blitz</a></li>
             </ul>
         </nav>
-        <section style="max-width:100%;height:">
-            <img src="Render.png" style="max-width:100%">
+        <section style="width:100%;height:">
+            <img src="Render.png" style="width:100%">
         </section>
         <section id="our-team">
             <h1>Who are we?</h1>
