--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li style="float:right;"><a href="index.html">Blitz</a></li>
             </ul>
         </nav>
-        <section style="width:100%;height:">
+        <section style="width:100%">
             <img src="Render.png" style="width:100%">
         </section>
         <section id="our-team">
