--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <section style="width:100%;height:100%;">
-            <img src="Render.png" style="width:100%">
+            <img src="Render.png" style="width:100%;height:100%;">
         </section>
         <section id="our-team">
             <h1>Who are we?</h1>
