--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p>Rayhaan Smith, Resource Manager: rayhaan.smith@saintolaves.net</p>
         </section>
         <footer style="margin:0">
-            <h3 style="padding: 20px;">© Chen Wang, 2022-2023. All rights reserved.</h3>
+            <h3 style="padding: 20%;">© Chen Wang, 2022-2023. All rights reserved.</h3>
         </footer>
     </body>
 </html>
