--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#our-car-design">Our Car Design</a></li>
                 <li><a href="#the-portfolio">The Portfolio</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
-                <li style="float:right;"><a style="padding:1px" href="index.html"><img src="placeholder.png" style="height:50px;width:50px;"></a></li>
+                <li style="float:right;"><a href="index.html"><img src="Logo.png" style="height:5%;width:5%;"></a></li>
                 <li style="float:right;"><a href="index.html">Blitz</a></li>
             </ul>
         </nav>
