Add text in Who are we? and What is F1?

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </section>
         <section id="our-team">
             <h1>Who are we?</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>We are Team Blitz of Saint Olave's Grammar School, a group of 4 dedicated team members with a burning passion of STEM and DT. We all came together over the months, collaborating with each other with our own various different skillsets and thinking. We thoroughly enjoy the hands-on experience the F1 in Schools club provides us and the teamwork & collaboration skills we have developed on our journey, helping us get to where we are with our car, portfolio and brand today!</p>
             <h1>What is F1 in Schools?</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>F1 in Schools is a STEM-based fun activity with the goal of introducing students to STEM subjects in an engaging way, using the theme of F1 to encourage students to compete. Students create a miniature F1 car with F1-style features to maximise aerodynamics, thinking through aesthetics, manufacturing, sketches and designing on CAD, designing a portfolio to document their journey and even developing a brand to display at the competition and raise funds for getting the best resources possible!</p>
             <a href="https://www.f1inschools.co.uk/about.html">Learn more..</a>
             <h1>The Team</h1>
             <div class="small">
@@ -39,24 +39,28 @@
                 <p class="bold">Team Leader & Graphic Designer</p>
                 <img src="Yash.jpg">
                 <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
+                <blockquote style="background-color:grey;">"Quote"</blockquote>
             </div>
             <div class="small">
                 <h2>Pranit Malhotra</h2>
                 <p class="bold">Design Engineer</p>
                 <img src="Pranit.jpg">
                 <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
+                <blockquote style="background-color:grey;">"Quote"</blockquote>
             </div>
             <div class="small">
                 <h2>Chen Hui Wang</h2>
                 <p class="bold">Testing & Social Media Manager</p>
                 <img src="Chen.jpg">
-                <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
+                <p>Chen works on a crucial part of the Design-Test cycle: the testing phase. He manages the CFD testing to feedback results & figures such as drag to Pranit, helping us improve our car step by step. In addition, he manages the social media and digital presence side of our brand, even creating this very website, and managing our Twitter account. He has also set up our email and Github account to use for team-related activities.</p>
+                <blockquote style="background-color:grey;">"f1 is very cool"</blockquote>
             </div>
             <div class="small">
                 <h2>Rayhaan Smith</h2>
                 <p class="bold">Resource Manager</p>
                 <img src="Rayhaan.jpg">
                 <p>Caecilius est in horto. Caecilius est in horto sedet. servus est in atrio. servus est in atrio laborat. Metella est in atrio. Metella est in atrio sedet. Quintus est in tablino. Quintus est in tablino sedet. Cerberus est in via. coquus est in culina. coquus est in culina dormit. Cerberus intrat. Cerberus circumspectat. cibus est in mensa. canis salit. calis est in mensa stat. Grumio stertit. canis latrat. Grumio surgit. coquus est iratus. 'pestis! furcifer!' coquus clamat. Cerberus exit.</p>
+                <blockquote style="background-color:grey;">"Quote"</blockquote>
             </div>
         </section>
         <section id="our-car-design">
