--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     <body>
         <nav>
             <ul>
+                <li><a href="https://teamblitzolaves.github.io/"><img src="Logo.png" style="height:2.5%;width:2.5%;"></a></li>
                 <li><a href="#">Welcome!</a></li>
                 <li><a href="#our-team">Our Team</a></li>
                 <li><a href="#our-car-design">Our Car Design</a></li>
                 <li><a href="#the-portfolio">The Portfolio</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
-                <li style="float:right;"><a href="index.html"><img src="Logo.png" style="height:5%;width:5%;"></a></li>
-                <li style="float:right;"><a href="index.html">Blitz</a></li>
             </ul>
         </nav>
         <section style="width:100%;height:100%;">
